@@ -1,3 +1,9 @@
+2017-06-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
+	* soap-client.el: Bump version to 3.1.3.
+	(soap-name-p): Fix checkdoc issue.
+	(soap-invoke-internal): Fix indentation.
+
 2017-06-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-invoke-internal): make SOAPAction header a
